--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">Event</span></h3>
+					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">the Hackathon</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -129,39 +129,39 @@
 						<!-- row -->
 						<div class="row">
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-4 col-sm-4 col-xs-4">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="900" data-speed="1500">0</span>+</h3>
+									<h3><span class="counter" data-from="0" data-to="8" data-speed="1500">0</span></h3>
 									<p>Hours</p>
 								</div>
 							</div>
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-4 col-sm-4 col-xs-4">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="750" data-speed="1500">0</span>+</h3>
-									<p>Venues</p>
+									<h3><span class="counter" data-from="0" data-to="15" data-speed="1500">0</span>+</h3>
+									<p>Problem Statements</p>
 								</div>
 							</div>
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-4 col-sm-4 col-xs-4">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="50" data-speed="1500">0</span>+</h3>
-									<p>Country</p>
+									<h3><span class="counter" data-from="0" data-to="10000" data-speed="1500">0</span>+</h3>
+									<p>Lines of Code</p>
 								</div>
 							</div>
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<!-- <div class="col-md-3 col-sm-3 col-xs-6">
 								<div class="number">
 									<h3><span class="counter" data-from="0" data-to="20" data-speed="1500">0</span>+</h3>
 									<p>Speakers</p>
 								</div>
-							</div>
+							</div> -->
 							<!-- /number -->
 						</div>
 						<!-- /row -->
