--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>OSDHack 2019 is the Open Hackathon powered by the Open Source Developers Community (OSDC) based in and around JIIT, Noida. It is the 8-hour long hackathon where the participants will hack on various real-world problems being faced by the present world.</p>
+
+						<p>It is open to all tracks be it Machine Learning, Web Development, Android Development, AR/VR, Blockchain, Internet of Things etc. There is no boundation on the usage of technology.</p>
 					</div>
 					<!-- /about content -->
 
@@ -129,7 +130,7 @@
 						<!-- row -->
 						<div class="row">
 							<!-- number -->
-							<div class="col-md-4 col-sm-4 col-xs-4">
+							<div class="col-md-3 col-sm-3 col-xs-6">
 								<div class="number">
 									<h3><span class="counter" data-from="0" data-to="8" data-speed="1500">0</span></h3>
 									<p>Hours</p>
@@ -138,7 +139,7 @@
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-4 col-sm-4 col-xs-4">
+							<div class="col-md-3 col-sm-3 col-xs-6">
 								<div class="number">
 									<h3><span class="counter" data-from="0" data-to="15" data-speed="1500">0</span>+</h3>
 									<p>Problem Statements</p>
@@ -147,7 +148,7 @@
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-4 col-sm-4 col-xs-4">
+							<div class="col-md-3 col-sm-3 col-xs-6">
 								<div class="number">
 									<h3><span class="counter" data-from="0" data-to="10000" data-speed="1500">0</span>+</h3>
 									<p>Lines of Code</p>
@@ -156,13 +157,12 @@
 							<!-- /number -->
 
 							<!-- number -->
-							<!-- <div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-3 col-sm-3 col-xs-6">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="20" data-speed="1500">0</span>+</h3>
-									<p>Speakers</p>
+									<h3><span class="counter" data-from="0" data-to="5000" data-speed="1500">0</span></h3>
+									<p>Worth Prizes</p>
 								</div>
-							</div> -->
-							<!-- /number -->
+							</div> 
 						</div>
 						<!-- /row -->
 					</div>
