--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Event HTML Template</title>
+	<title>OSDHack</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -42,8 +42,8 @@
 				<!-- Logo -->
 				<div class="navbar-brand">
 					<a class="logo" href="index.html">
-						<img class="logo-img" src="./img/logo.png" alt="logo">
-						<img class="logo-alt-img" src="./img/logo-alt.png" alt="logo">
+						<img class="logo-img" src="./img/osdc-sticker.png" alt="logo">
+						<img class="logo-alt-img" src="./img/osdc-sticker.png" alt="logo">
 					</a>
 				</div>
 				<!-- /Logo -->
@@ -62,10 +62,8 @@
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#speakers">Speakers</a></li>
-					<li><a href="#sponsors">Sponsors</a></li>
+					<li><a href="#">Rules</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -89,9 +87,9 @@
 					<!-- home content -->
 					<div class="col-md-8 col-md-offset-2">
 						<div class="home-content">
-							<h1>Lorem ipsum dolor sit amet</h1>
-							<h4 class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
-							<a href="#" class="main-btn">Buy Ticket</a>
+							<h1>OSDHack'19</h1>
+							<h4 class="lead">Hack on Projects to Solve Real World Problems</h4>
+							<a href="#" class="main-btn">Registration</a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -185,19 +183,19 @@
 				<div id="galery-owl" class="owl-carousel owl-theme">
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="./img/galery01.jpg" alt="">
+						<img src="./img/osdc_hack_1.jpg" alt="">
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="./img/galery02.jpg" alt="">
+						<img src="./img/osdc_hack_2.jpg" alt="">
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="./img/galery03.jpg" alt="">
+						<img src="./img/osdc_hack_3.jpg" alt="">
 					</div>
 					<!-- /galery item -->
 
@@ -210,34 +208,7 @@
 	</div>
 	<!-- /Galery -->
 
-	<!-- Video CTA -->
-	<div id="video-cta" class="section">
-		<!-- background image -->
-		<div class="section-bg" style="background-image:url(./img/background02.jpg)" data-stellar-background-ratio="0.5"></div>
-		<!-- /background image -->
-
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<!-- cta content -->
-				<div class="col-md-8 col-md-offset-2">
-					<div class="cta-content text-center">
-						<a class="video-play" href="#">
-							<i class="fa fa-play"></i>
-						</a>
-						<h2>Watch this video</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-					</div>
-				</div>
-				<!-- /cta content -->
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /Video CTA -->
-
+	
 	<!-- Event Schedule -->
 	<div id="schedule" class="section">
 		<!-- container -->
@@ -262,7 +233,7 @@
 								</div>
 							</div>
 							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM - 03: 00 PM</p>
 								<h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 								<p>By <a href="#">John Doe</a></p>
@@ -353,10 +324,6 @@
 						<!-- /event -->
 					</div>
 
-					<div class="download-btn">
-						<a href="#" class="main-btn">Download Schedule</a>
-					</div>
-
 				</div>
 			</div>
 			<!-- /row -->
@@ -364,228 +331,6 @@
 		<!-- /container -->
 	</div>
 	<!-- /Event Schedule -->
-
-	<!-- Speakers -->
-	<div id="speakers" class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<!-- section title -->
-				<div class="section-title">
-					<h3 class="title"><span>Our</span> <span style="color: #dd0a37;">Speakers</span></h3>
-				</div>
-				<!-- section title -->
-
-				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
-						<div class="speaker-img">
-							<img src="./img/speaker01.jpg" alt="">
-						</div>
-						<div class="speaker-body">
-							<div class="speaker-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-instagram"></i></a>
-								<a href="#"><i class="fa fa fa-linkedin"></i></a>
-							</div>
-							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker -->
-
-				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
-						<div class="speaker-img">
-							<img src="./img/speaker02.jpg" alt="">
-						</div>
-						<div class="speaker-body">
-							<div class="speaker-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-instagram"></i></a>
-								<a href="#"><i class="fa fa fa-linkedin"></i></a>
-							</div>
-							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker -->
-
-				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
-						<div class="speaker-img">
-							<img src="./img/speaker03.jpg" alt="">
-						</div>
-						<div class="speaker-body">
-							<div class="speaker-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-instagram"></i></a>
-								<a href="#"><i class="fa fa fa-linkedin"></i></a>
-							</div>
-							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker -->
-
-				<!-- speaker modal -->
-				<div id="speaker-modal-1" class="speaker-modal modal fade">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
-							<div class="modal-body">
-								<div class="row">
-									<div class="col-md-5">
-										<div class="speaker-modal-img">
-											<img src="./img/speaker-info.jpg" alt="">
-										</div>
-									</div>
-									<div class="col-md-7">
-										<div class="speaker-modal-content">
-											<h2 class="speaker-name">John Doe</h2>
-											<span class="speaker-job">- Manager, CEO</span>
-
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-												irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-											<div class="speaker-website">
-												<h4>Website</h4>
-												<a href="#">www.johndoe.com</a>
-											</div>
-
-											<div class="speaker-social">
-												<h4>Social Profile</h4>
-												<a href="#"><i class="fa fa-facebook"></i></a>
-												<a href="#"><i class="fa fa-twitter"></i></a>
-												<a href="#"><i class="fa fa-instagram"></i></a>
-												<a href="#"><i class="fa fa fa-linkedin"></i></a>
-											</div>
-
-											<div class="speaker-events">
-												<h4>Sessions</h4>
-												<div class="speaker-event">
-													<span><strong>Day 1 -</strong> February 20, 2018 8 : 00 AM - 11 : 00 AM</span>
-													<p>His id altera fabellas facilisis. Has eros assueverit cu</p>
-												</div>
-
-												<div class="speaker-event">
-													<span><strong>Day 2 -</strong> February 20, 2018 8 : 00 AM - 11 : 00 AM</span>
-													<p>At mucius deserunt delicatissimi eam, labitur detraxit ut sit</p>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker modal -->
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /Speakers -->
-
-	<!-- Sponsors -->
-	<div id="sponsors" class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<!-- section title -->
-				<div class="section-title">
-					<h3 class="title"><span>Our</span> <span style="color: #dd0a37;">Sponsors</span></h3>
-				</div>
-				<!-- /section title -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-				<!-- sponsor -->
-				<div class="col-md-3 col-sm-4 col-xs-6">
-					<a href="#" class="sponsor">
-						<img src="./img/sponsor.png" alt="">
-					</a>
-				</div>
-				<!-- /sponsor -->
-
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /Sponsors -->
 
 	<!-- CTA -->
 	<div id="cta" class="section">
@@ -600,9 +345,9 @@
 				<!-- cta content -->
 				<div class="col-md-8 col-md-offset-2">
 					<div class="cta-content text-center">
-						<h2>Get Ticket Now!</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<a href="#" class="main-btn">Buy Ticket</a>
+						<h2>Register Now!</h2>
+						<p class="lead"></p>
+						<a href="#" class="main-btn">Register Now</a>
 					</div>
 				</div>
 				<!-- /cta content -->
@@ -615,6 +360,8 @@
 
 	<!-- Contact -->
 	<div id="contact" class="section">
+
+		
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
@@ -626,43 +373,47 @@
 				<!-- /section title -->
 
 				<!-- contact -->
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="contact">
-						<h3>Address</h3>
-						<p>2635 Simons Hollow Road, NEW YORK</p>
+						<h3>Venue</h3>
+						<p>CL-1 and CL-2 Lab <br> Jaypee Institute of Information Technology, <br>A 10, Block A, Industrial Area, Sector 62, Noida, <br> Uttar Pradesh 201309</p>
 					</div>
 				</div>
 				<!-- /contact -->
 
 				<!-- contact -->
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="contact">
 						<h3>Phone</h3>
-						<p>570-751-2415</p>
+						<p>7982916122</p>
 					</div>
 				</div>
 				<!-- /contact -->
 
 				<!-- contact -->
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="contact">
 						<h3>Email</h3>
-						<a href="#">event@support.com</a>
+						<a href="#">osdcjiit@gmail.com</a>
 					</div>
 				</div>
 				<!-- /contact -->
+
+				<div class="col-sm-3">
+					<div class="contact">
+						<h3>Telegram Channel</h3>
+						<a href="https://telegram.me/osdhack">telegram.me/osdhack</a>
+					</div>
+				</div>
 
 			</div>
 			<!-- /row -->
 		</div>
 		<!-- /container -->
 
-		<!-- Map -->
-		<div id="map"></div>
-		<!-- /Map -->
 	</div>
 	<!-- /Contact -->
-
+	<hr>
 	<!-- Footer -->
 	<footer id="footer">
 		<!-- container -->
@@ -674,7 +425,7 @@
 				<div class="col-md-4 col-md-push-4">
 					<div class="footer-brand">
 						<a class="logo" href="index.html">
-							<img class="logo-img" src="./img/logo.png" alt="logo">
+							<img class="logo-img" src="./img/osdc-sticker.png" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -683,20 +434,18 @@
 				<!-- contact social -->
 				<div class="col-md-4 col-md-push-4">
 					<div class="contact-social">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
-						<a href="#"><i class="fa fa-pinterest"></i></a>
-						<a href="#"><i class="fa fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/groups/jiitlug/"><i class="fa fa-facebook"></i></a>
+						<a href="https://twitter.com/osdcjiit"><i class="fa fa-twitter"></i></a>
+						<a href="https://www.linkedin.com/company/osdcjiit/"><i class="fa fa fa-linkedin"></i></a>
 					</div>
 				</div>
 				<!-- /contact social -->
 
 				<!-- copyright -->
 				<div class="col-md-4 col-md-pull-8">
+					
 					<span class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="osdc.netlify.com">OSDC</a><br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
 				</div>
 				<!-- /copyright -->
