--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#">Rules</a></li>
+					<li><a href="#rules">Rules</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -217,7 +217,7 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title"><span>Event</span> <span style="color: #dd0a37;">Schedule</span></h3>
+					<h3 class="title"><span>Hackathon</span> <span style="color: #dd0a37;">Schedule</span></h3>
 				</div>
 				<!-- /section title -->
 
@@ -228,15 +228,13 @@
 						<div class="event">
 							<div class="event-day">
 								<div>
-									<span class="day">15</span>
-									<span class="year">Feb, 2018</span>
+									<span class="day">23</span>
+									<span class="year">Nov, 2019</span>
 								</div>
 							</div>
 							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM - 03: 00 PM</p>
-								<h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 01 : 00 PM - 01 : 30 PM</p>
+								<h3 class="event-title">Settling down & Rules Explanation</h3>
 							</div>
 						</div>
 						<!-- /event -->
@@ -244,11 +242,9 @@
 						<!-- event -->
 						<div class="event">
 							<div class="event-hour"></div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">Perpetua consectetuer definitiones id sea, mei utinam eripuit ne</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
+							<div class="event-content"><br><br>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 1 : 30 PM</p>
+								<h3 class="my-5 event-title">Hacking Begins.</h3>
 							</div>
 						</div>
 						<!-- /event -->
@@ -256,28 +252,10 @@
 						<!-- event -->
 						<div class="event">
 							<div class="event-hour"></div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
-							</div>
-						</div>
-						<!-- /event -->
-
-						<!-- event -->
-						<div class="event">
-							<div class="event-day">
-								<div>
-									<span class="day">16</span>
-									<span class="year">Feb, 2018</span>
-								</div>
-							</div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
+							<div class="event-content"><br><br>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 3 : 30 PM</p>
+								<h3 class="event-title">Mid Evaluations Begin.</h3>
+								
 							</div>
 						</div>
 						<!-- /event -->
@@ -285,28 +263,10 @@
 						<!-- event -->
 						<div class="event">
 							<div class="event-hour"></div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
-							</div>
-						</div>
-						<!-- /event -->
-
-						<!-- event -->
-						<div class="event">
-							<div class="event-day">
-								<div>
-									<span class="day">17</span>
-									<span class="year">Feb, 2018</span>
-								</div>
-							</div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">His id altera fabellas facilisis. Has eros assueverit cu</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
+							<div class="event-content"><br><br>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 4 : 30 PM</p>
+								<h3 class="event-title">Snacks.</h3>
+								
 							</div>
 						</div>
 						<!-- /event -->
@@ -314,16 +274,21 @@
 						<!-- event -->
 						<div class="event">
 							<div class="event-hour"></div>
-							<div class="event-content">
-								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
-								<h3 class="event-title">At mucius deserunt delicatissimi eam, labitur detraxit ut sit</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								<p>By <a href="#">John Doe</a></p>
+							<div class="event-content"><br><br>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 7 : 30 PM</p>
+								<h3 class="event-title">Final Evaluations Begin.</h3>
 							</div>
 						</div>
 						<!-- /event -->
+
+						<div class="event">
+							<div class="event-hour"></div>
+							<div class="event-content"><br><br>
+								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 30 PM</p>
+								<h3 class="event-title">Result Declaration.</h3>
+							</div>
+						</div>
 					</div>
-
 				</div>
 			</div>
 			<!-- /row -->
@@ -333,7 +298,7 @@
 	<!-- /Event Schedule -->
 
 	<!-- CTA -->
-	<div id="cta" class="section">
+	<div id="rules" class="section">
 		<!-- background image -->
 		<div class="section-bg" style="background-image:url(./img/background03.jpg)" data-stellar-background-ratio="0.5"></div>
 		<!-- /background image -->
@@ -345,9 +310,9 @@
 				<!-- cta content -->
 				<div class="col-md-8 col-md-offset-2">
 					<div class="cta-content text-center">
-						<h2>Register Now!</h2>
+						<h2>Rules & FAQs</h2>
 						<p class="lead"></p>
-						<a href="#" class="main-btn">Register Now</a>
+						<a href="#" class="main-btn">Download Rules</a>
 					</div>
 				</div>
 				<!-- /cta content -->
