--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<link rel="icon" type="image/png" href="./img/favicon-16.png">
+	<link rel="icon" type="image/png" href="./img/favicon.png">
 	<title>OSDHack</title>
 
 	<!-- Google font -->
