removed prize counter

--- a/index.html
+++ b/index.html
@@ -128,39 +128,39 @@
 						<!-- row -->
 						<div class="row">
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-4 col-sm-4 col-xs-6">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="8" data-speed="1500">0</span></h3>
+									<h3><span class="counter" data-from="0" data-to="7" data-speed="1000">0</span></h3>
 									<p>Hours</p>
 								</div>
 							</div>
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-4 col-sm-4 col-xs-6">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="15" data-speed="1500">0</span>+</h3>
+									<h3><span class="counter" data-from="0" data-to="15" data-speed="1000">0</span>+</h3>
 									<p>Problem Statements</p>
 								</div>
 							</div>
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<div class="col-md-4 col-sm-4 col-xs-6">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="10000" data-speed="1500">0</span>+</h3>
+									<h3><span class="counter" data-from="0" data-to="9000" data-speed="1000">0</span>+</h3>
 									<p>Lines of Code</p>
 								</div>
 							</div>
 							<!-- /number -->
 
 							<!-- number -->
-							<div class="col-md-3 col-sm-3 col-xs-6">
+							<!-- <div class="col-md-3 col-sm-3 col-xs-6">
 								<div class="number">
-									<h3><span class="counter" data-from="0" data-to="5000" data-speed="1500">0</span></h3>
+									<h3><span class="counter" data-from="0" data-to="4000" data-speed="1000">0</span></h3>
 									<p>Worth Prizes</p>
 								</div>
-							</div> 
+							</div>  -->
 						</div>
 						<!-- /row -->
 					</div>
@@ -325,8 +325,6 @@
 
 	<!-- Contact -->
 	<div id="contact" class="section">
-
-		
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
@@ -428,8 +426,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="js/jquery.waypoints.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.stellar.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-	<script src="js/google-map.js"></script>
 	<script src="js/jquery.countTo.js"></script>
 	<script src="js/main.js"></script>
 
