--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="home-content">
 							<h1>OSDHack'19</h1>
 							<h4 class="lead">Hack on Projects to Solve Real World Problems</h4>
-							<a href="#" class="main-btn">Registration</a>
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link" class="main-btn">Registration</a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -312,7 +312,7 @@
 					<div class="cta-content text-center">
 						<h2>Rules & FAQs</h2>
 						<p class="lead"></p>
-						<a href="#" class="main-btn">Download Rules</a>
+						<a href="./OSDHack Rules.pdf" class="main-btn">Download Rules</a>
 					</div>
 				</div>
 				<!-- /cta content -->
