--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="home-content">
 							<h1>OSDHack'19</h1>
 							<h4 class="lead">Hack on Projects to Solve Real World Problems</h4>
-							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link" class="main-btn">Registration</a>
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link" target="_blank"  class="main-btn">Registration</a>
 						</div>
 					</div>
 					<!-- /home content -->
