added coc and new rules doc

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					<div class="cta-content text-center">
 						<h2>Rules & FAQs</h2>
 						<p class="lead"></p>
-						<a href="./OSDHack Rules.pdf" class="main-btn">Download Rules</a>
+						<a href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download Rules</a>
 					</div>
 				</div>
 				<!-- /cta content -->
