--- a/index.html
+++ b/index.html
@@ -391,6 +391,8 @@
 						<a class="logo" href="index.html">
 							<img class="logo-img" src="./img/osdc-sticker.png" alt="logo">
 						</a>
+						<br>
+						<a href="https://www.contributor-covenant.org/" target="_blank"><p class="lead"></p>Code of Conduct</p></a>
 					</div>
 				</div>
 				<!-- /footer logo -->
