New tab for telegram link

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 				<div class="col-sm-3">
 					<div class="contact">
 						<h3>Telegram Channel</h3>
-						<a href="https://telegram.me/osdhack">telegram.me/osdhack</a>
+						<a href="https://telegram.me/osdhack" target="_blank">telegram.me/osdhack</a>
 					</div>
 				</div>
 
