--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<div class="home-content">
 							<h1>OSDHack'19</h1>
-							<h4 class="lead">Hack on Projects to Solve Real World Problems</h4>
+							<h4 class="lead">A Hackathon on Sustainable Computing based on Sustainable Development Goals</h4>
 							<h5 class="lead">Saturday, November 23, 2019 | 1:00pm - 9:00pm</h5>
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link" target="_blank"  class="main-btn">Registration</a>
 						</div>
